--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^13.3.0",
+    "concurrently": "^4.0.1",
     "eslint": "^4.15.0",
     "eslint-config-gitbook": "^3.0.0",
     "eslint-plugin-flowtype": "^2.41.0",
@@ -36,6 +37,7 @@
     "http-server": "^0.9.0",
     "immutable": "^3.8.2",
     "mocha": "^3.0.1",
+    "nodemon": "^1.18.4",
     "prettier": "^1.9.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -57,6 +59,7 @@
     "serve-example": "http-server ./example/ -p 8081",
     "start": "npm run build-example && npm run serve-example",
     "deploy-example": "npm run build-example && gh-pages -d ./example",
+    "dev": "concurrently \"npm run serve-example\" \"nodemon\"",
     "test": "./node_modules/.bin/mocha ./tests/all.js --compilers js:babel-register --reporter=list"
   },
   "keywords": ["slate"]
