--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "read-metadata": "^1.0.0",
-    "slate": "^0.44.6",
+    "slate": "0.44.9",
     "slate-hyperscript": "^0.11.21",
-    "slate-plain-serializer": "^0.6.30",
-    "slate-react": "^0.21.12",
+    "slate-plain-serializer": "^0.6.33",
+    "slate-react": "0.21.15",
     "stringify": "^5.1.0"
   },
   "scripts": {
