--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "mocha": "^3.0.1",
     "nodemon": "^1.18.4",
     "prettier": "^1.9.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "read-metadata": "^1.0.0",
-    "slate": "0.44.9",
-    "slate-hyperscript": "^0.11.21",
-    "slate-plain-serializer": "^0.6.33",
-    "slate-react": "0.21.15",
+    "slate": "^0.57.1",
+    "slate-hyperscript": "^0.57.1",
+    "slate-plain-serializer": "^0.7.11",
+    "slate-react": "^0.57.1",
     "stringify": "^5.1.0"
   },
   "scripts": {
