--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "repository": "git://github.com/productboard/slate-edit-list.git",
   "main": "./dist/index.js",
   "peerDependencies": {
-    "slate": "^0.40.0"
+    "slate": "^0.40.0",
+    "slate-react": "^0.57.1"
   },
   "files": [
     "dist",
@@ -60,7 +61,8 @@
     "start": "npm run build-example && npm run serve-example",
     "deploy-example": "npm run build-example && gh-pages -d ./example",
     "dev": "concurrently \"npm run serve-example\" \"nodemon\"",
-    "test": "./node_modules/.bin/mocha ./tests/all.js --compilers js:babel-register --reporter=list"
+    "test": "./node_modules/.bin/mocha ./tests/* --compilers js:babel-register --reporter=list",
+    "test:watch": "yarn test --watch"
   },
   "keywords": [
     "slate"
