--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "slate-hyperscript": "^0.57.1",
     "slate-plain-serializer": "^0.7.11",
     "slate-react": "^0.57.1",
+    "slate-history": "^0.57.1",
     "stringify": "^5.1.0"
   },
   "scripts": {
