Host self on npm

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@productboard/slate-edit-list",
+  "name": "@ztratar/slate-edit-list",
   "description": "A Slate plugin to handle keyboard events in lists.",
-  "version": "0.21.5",
+  "version": "0.21.6",
   "license": "Apache-2.0",
-  "repository": "git://github.com/productboard/slate-edit-list.git",
+  "repository": "git://github.com/ztratar/slate-edit-list.git",
   "main": "./dist/index.js",
   "peerDependencies": {
     "slate": "^0.57.1",
